--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        // App version
+        // Application version
         version_name = '1.0.1' // X.Y.Z; X = Major, Y = Minor, Z = Patch level
         version_code = 10001 // XYYZZ
 
-        // SDK and tools
+        // SDK and tools Version
         compile_sdk_version = 34
         target_sdk_version = 34
         min_sdk_version = 28
