--- a/build.gradle
+++ b/build.gradle
@@ -6,18 +6,18 @@ buildscript {
         version_code = 10001 // XYYZZ
 
         // SDK and tools Version
-        compile_sdk_version = 34
-        target_sdk_version = 34
+        compile_sdk_version = 35
+        target_sdk_version = 35
         min_sdk_version = 28
 
         android_gradle_plugin_version = '4.2.1'
-        espresso_version = '3.5.1'
+        espresso_version = '3.6.1'
         google_services_version = "4.3.3"
         play_services_version = '22.2.0'
         google_api_android_version = '1.26.0'
         google_api_drive_version = 'v3-rev136-1.25.0'
         lifecycle_version = "2.6.1"
-        appcompat_version = "1.1.0a"
+        appcompat_version = "1.7.0"
         paging_version = '2.1.1'
         room_version = "2.2.3"
         timber_version = "4.7.1"
@@ -25,7 +25,7 @@ buildscript {
         permissions_version = '4.6.0'
         constraintlayout_version = '1.1.3'
         multidex_version = '2.0.1'
-        nav_version = '2.7.2'
+        nav_version = '2.8.3'
 
         retrofitVersion = '2.9.0'
         gsonVersion = '2.3.0'
@@ -38,5 +38,7 @@ buildscript {
     }
 }
 plugins {
-    id 'com.android.application' version '8.7.0' apply false
+    id 'com.android.application'            version '8.7.2' apply false
+    id 'com.google.firebase.crashlytics'    version '3.0.2' apply false
+  //  id 'com.google.gms.google-services'     version '4.4.2' apply false
 }
