--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
-        tools:targetApi="31">
+        android:theme="@style/AppTheme.NoActionBar">
 
         <activity android:name=".SplashActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
